library/src/libqgraphicsitem.h

typedef struct QCursor QCursor;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsObject QGraphicsObject;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsTransform QGraphicsTransform;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QPointF QPointF;
typedef struct QTransform QTransform;
QGraphicsItem* QGraphicsItem_new();
QGraphicsItem* QGraphicsItem_new2(QGraphicsItem* parent);
QGraphicsScene* QGraphicsItem_Scene(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_ParentItem(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_TopLevelItem(const QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ParentObject(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_ParentWidget(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_TopLevelWidget(const QGraphicsItem* self);
QGraphicsWidget* QGraphicsItem_Window(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_Panel(const QGraphicsItem* self);
void QGraphicsItem_SetParentItem(QGraphicsItem* self, QGraphicsItem* parent);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_ChildItems(const QGraphicsItem* self);
bool QGraphicsItem_IsWidget(const QGraphicsItem* self);
bool QGraphicsItem_IsWindow(const QGraphicsItem* self);
bool QGraphicsItem_IsPanel(const QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ToGraphicsObject(QGraphicsItem* self);
QGraphicsObject* QGraphicsItem_ToGraphicsObject2(const QGraphicsItem* self);
QGraphicsItemGroup* QGraphicsItem_Group(const QGraphicsItem* self);
void QGraphicsItem_SetGroup(QGraphicsItem* self, QGraphicsItemGroup* group);
int QGraphicsItem_Flags(const QGraphicsItem* self);
void QGraphicsItem_SetFlag(QGraphicsItem* self, int flag);
void QGraphicsItem_SetFlags(QGraphicsItem* self, int flags);
int QGraphicsItem_CacheMode(const QGraphicsItem* self);
void QGraphicsItem_SetCacheMode(QGraphicsItem* self, int mode);
int QGraphicsItem_PanelModality(const QGraphicsItem* self);
void QGraphicsItem_SetPanelModality(QGraphicsItem* self, int panelModality);
bool QGraphicsItem_IsBlockedByModalPanel(const QGraphicsItem* self);
libqt_string QGraphicsItem_ToolTip(const QGraphicsItem* self);
void QGraphicsItem_SetToolTip(QGraphicsItem* self, libqt_string toolTip);
QCursor* QGraphicsItem_Cursor(const QGraphicsItem* self);
void QGraphicsItem_SetCursor(QGraphicsItem* self, QCursor* cursor);
bool QGraphicsItem_HasCursor(const QGraphicsItem* self);
void QGraphicsItem_UnsetCursor(QGraphicsItem* self);
bool QGraphicsItem_IsVisible(const QGraphicsItem* self);
bool QGraphicsItem_IsVisibleTo(const QGraphicsItem* self, QGraphicsItem* parent);
void QGraphicsItem_SetVisible(QGraphicsItem* self, bool visible);
void QGraphicsItem_Hide(QGraphicsItem* self);
void QGraphicsItem_Show(QGraphicsItem* self);
bool QGraphicsItem_IsEnabled(const QGraphicsItem* self);
void QGraphicsItem_SetEnabled(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_IsSelected(const QGraphicsItem* self);
void QGraphicsItem_SetSelected(QGraphicsItem* self, bool selected);
bool QGraphicsItem_AcceptDrops(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptDrops(QGraphicsItem* self, bool on);
double QGraphicsItem_Opacity(const QGraphicsItem* self);
double QGraphicsItem_EffectiveOpacity(const QGraphicsItem* self);
void QGraphicsItem_SetOpacity(QGraphicsItem* self, double opacity);
QGraphicsEffect* QGraphicsItem_GraphicsEffect(const QGraphicsItem* self);
void QGraphicsItem_SetGraphicsEffect(QGraphicsItem* self, QGraphicsEffect* effect);
int QGraphicsItem_AcceptedMouseButtons(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptedMouseButtons(QGraphicsItem* self, int buttons);
bool QGraphicsItem_AcceptHoverEvents(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptHoverEvents(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_AcceptTouchEvents(const QGraphicsItem* self);
void QGraphicsItem_SetAcceptTouchEvents(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_FiltersChildEvents(const QGraphicsItem* self);
void QGraphicsItem_SetFiltersChildEvents(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_HandlesChildEvents(const QGraphicsItem* self);
void QGraphicsItem_SetHandlesChildEvents(QGraphicsItem* self, bool enabled);
bool QGraphicsItem_IsActive(const QGraphicsItem* self);
void QGraphicsItem_SetActive(QGraphicsItem* self, bool active);
bool QGraphicsItem_HasFocus(const QGraphicsItem* self);
void QGraphicsItem_SetFocus(QGraphicsItem* self);
void QGraphicsItem_ClearFocus(QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_FocusProxy(const QGraphicsItem* self);
void QGraphicsItem_SetFocusProxy(QGraphicsItem* self, QGraphicsItem* item);
QGraphicsItem* QGraphicsItem_FocusItem(const QGraphicsItem* self);
QGraphicsItem* QGraphicsItem_FocusScopeItem(const QGraphicsItem* self);
void QGraphicsItem_GrabMouse(QGraphicsItem* self);
void QGraphicsItem_UngrabMouse(QGraphicsItem* self);
void QGraphicsItem_GrabKeyboard(QGraphicsItem* self);
void QGraphicsItem_UngrabKeyboard(QGraphicsItem* self);
QPointF* QGraphicsItem_Pos(const QGraphicsItem* self);
double QGraphicsItem_X(const QGraphicsItem* self);
void QGraphicsItem_SetX(QGraphicsItem* self, double x);
double QGraphicsItem_Y(const QGraphicsItem* self);
void QGraphicsItem_SetY(QGraphicsItem* self, double y);
QPointF* QGraphicsItem_ScenePos(const QGraphicsItem* self);
void QGraphicsItem_SetPos(QGraphicsItem* self, QPointF* pos);
void QGraphicsItem_SetPos2(QGraphicsItem* self, double x, double y);
void QGraphicsItem_MoveBy(QGraphicsItem* self, double dx, double dy);
void QGraphicsItem_EnsureVisible(QGraphicsItem* self);
void QGraphicsItem_EnsureVisible2(QGraphicsItem* self, double x, double y, double w, double h);
QTransform* QGraphicsItem_Transform(const QGraphicsItem* self);
QTransform* QGraphicsItem_SceneTransform(const QGraphicsItem* self);
QTransform* QGraphicsItem_DeviceTransform(const QGraphicsItem* self, QTransform* viewportTransform);
QTransform* QGraphicsItem_ItemTransform(const QGraphicsItem* self, QGraphicsItem* other);
void QGraphicsItem_SetTransform(QGraphicsItem* self, QTransform* matrix);
void QGraphicsItem_ResetTransform(QGraphicsItem* self);
void QGraphicsItem_SetRotation(QGraphicsItem* self, double angle);
double QGraphicsItem_Rotation(const QGraphicsItem* self);
void QGraphicsItem_SetScale(QGraphicsItem* self, double scale);
double QGraphicsItem_Scale(const QGraphicsItem* self);
libqt_list /* of QGraphicsTransform* */ QGraphicsItem_Transformations(const QGraphicsItem* self);
void QGraphicsItem_SetTransformations(QGraphicsItem* self, libqt_list /* of QGraphicsTransform* */ transformations);
QPointF* QGraphicsItem_TransformOriginPoint(const QGraphicsItem* self);
void QGraphicsItem_SetTransformOriginPoint(QGraphicsItem* self, QPointF* origin);
void QGraphicsItem_SetTransformOriginPoint2(QGraphicsItem* self, double ax, double ay);
void QGraphicsItem_Advance(QGraphicsItem* self, int phase);
double QGraphicsItem_ZValue(const QGraphicsItem* self);
void QGraphicsItem_SetZValue(QGraphicsItem* self, double z);