src/libqgraphicsitem.bf

public struct QGraphicsItem
{
	[LinkName("QGraphicsItem_new")]
	public static extern void* QGraphicsItem_new();
	[LinkName("QGraphicsItem_new2")]
	public static extern void* QGraphicsItem_new2(QGraphicsItem parent);
	[LinkName("QGraphicsItem_Scene")]
	public static extern QGraphicsScene QGraphicsItem_Scene(void* c_this);
	[LinkName("QGraphicsItem_ParentItem")]
	public static extern QGraphicsItem QGraphicsItem_ParentItem(void* c_this);
	[LinkName("QGraphicsItem_TopLevelItem")]
	public static extern QGraphicsItem QGraphicsItem_TopLevelItem(void* c_this);
	[LinkName("QGraphicsItem_ParentObject")]
	public static extern QGraphicsObject QGraphicsItem_ParentObject(void* c_this);
	[LinkName("QGraphicsItem_ParentWidget")]
	public static extern QGraphicsWidget QGraphicsItem_ParentWidget(void* c_this);
	[LinkName("QGraphicsItem_TopLevelWidget")]
	public static extern QGraphicsWidget QGraphicsItem_TopLevelWidget(void* c_this);
	[LinkName("QGraphicsItem_Window")]
	public static extern QGraphicsWidget QGraphicsItem_Window(void* c_this);
	[LinkName("QGraphicsItem_Panel")]
	public static extern QGraphicsItem QGraphicsItem_Panel(void* c_this);
	[LinkName("QGraphicsItem_SetParentItem")]
	public static extern void QGraphicsItem_SetParentItem(void* c_this, QGraphicsItem parent);
	[LinkName("QGraphicsItem_ChildItems")]
	public static extern QGraphicsItem[] QGraphicsItem_ChildItems(void* c_this);
	[LinkName("QGraphicsItem_IsWidget")]
	public static extern bool QGraphicsItem_IsWidget(void* c_this);
	[LinkName("QGraphicsItem_IsWindow")]
	public static extern bool QGraphicsItem_IsWindow(void* c_this);
	[LinkName("QGraphicsItem_IsPanel")]
	public static extern bool QGraphicsItem_IsPanel(void* c_this);
	[LinkName("QGraphicsItem_ToGraphicsObject")]
	public static extern QGraphicsObject QGraphicsItem_ToGraphicsObject(void* c_this);
	[LinkName("QGraphicsItem_ToGraphicsObject2")]
	public static extern QGraphicsObject QGraphicsItem_ToGraphicsObject2(void* c_this);
	[LinkName("QGraphicsItem_Group")]
	public static extern QGraphicsItemGroup QGraphicsItem_Group(void* c_this);
	[LinkName("QGraphicsItem_SetGroup")]
	public static extern void QGraphicsItem_SetGroup(void* c_this, QGraphicsItemGroup group);
	[LinkName("QGraphicsItem_Flags")]
	public static extern int64 QGraphicsItem_Flags(void* c_this);
	[LinkName("QGraphicsItem_SetFlag")]
	public static extern void QGraphicsItem_SetFlag(void* c_this, int64 flag);
	[LinkName("QGraphicsItem_SetFlags")]
	public static extern void QGraphicsItem_SetFlags(void* c_this, int64 flags);
	[LinkName("QGraphicsItem_CacheMode")]
	public static extern int64 QGraphicsItem_CacheMode(void* c_this);
	[LinkName("QGraphicsItem_SetCacheMode")]
	public static extern void QGraphicsItem_SetCacheMode(void* c_this, int64 mode);
	[LinkName("QGraphicsItem_PanelModality")]
	public static extern int64 QGraphicsItem_PanelModality(void* c_this);
	[LinkName("QGraphicsItem_SetPanelModality")]
	public static extern void QGraphicsItem_SetPanelModality(void* c_this, int64 panelModality);
	[LinkName("QGraphicsItem_IsBlockedByModalPanel")]
	public static extern bool QGraphicsItem_IsBlockedByModalPanel(void* c_this);
	[LinkName("QGraphicsItem_ToolTip")]
	public static extern char8[] QGraphicsItem_ToolTip(void* c_this);
	[LinkName("QGraphicsItem_SetToolTip")]
	public static extern void QGraphicsItem_SetToolTip(void* c_this, char8[] toolTip);
	[LinkName("QGraphicsItem_Cursor")]
	public static extern QCursor QGraphicsItem_Cursor(void* c_this);
	[LinkName("QGraphicsItem_SetCursor")]
	public static extern void QGraphicsItem_SetCursor(void* c_this, QCursor cursor);
	[LinkName("QGraphicsItem_HasCursor")]
	public static extern bool QGraphicsItem_HasCursor(void* c_this);
	[LinkName("QGraphicsItem_UnsetCursor")]
	public static extern void QGraphicsItem_UnsetCursor(void* c_this);
	[LinkName("QGraphicsItem_IsVisible")]
	public static extern bool QGraphicsItem_IsVisible(void* c_this);
	[LinkName("QGraphicsItem_IsVisibleTo")]
	public static extern bool QGraphicsItem_IsVisibleTo(void* c_this, QGraphicsItem parent);
	[LinkName("QGraphicsItem_SetVisible")]
	public static extern void QGraphicsItem_SetVisible(void* c_this, bool visible);
	[LinkName("QGraphicsItem_Hide")]
	public static extern void QGraphicsItem_Hide(void* c_this);
	[LinkName("QGraphicsItem_Show")]
	public static extern void QGraphicsItem_Show(void* c_this);
	[LinkName("QGraphicsItem_IsEnabled")]
	public static extern bool QGraphicsItem_IsEnabled(void* c_this);
	[LinkName("QGraphicsItem_SetEnabled")]
	public static extern void QGraphicsItem_SetEnabled(void* c_this, bool enabled);
	[LinkName("QGraphicsItem_IsSelected")]
	public static extern bool QGraphicsItem_IsSelected(void* c_this);
	[LinkName("QGraphicsItem_SetSelected")]
	public static extern void QGraphicsItem_SetSelected(void* c_this, bool selected);
	[LinkName("QGraphicsItem_AcceptDrops")]
	public static extern bool QGraphicsItem_AcceptDrops(void* c_this);
	[LinkName("QGraphicsItem_SetAcceptDrops")]
	public static extern void QGraphicsItem_SetAcceptDrops(void* c_this, bool on);
	[LinkName("QGraphicsItem_Opacity")]
	public static extern double QGraphicsItem_Opacity(void* c_this);
	[LinkName("QGraphicsItem_EffectiveOpacity")]
	public static extern double QGraphicsItem_EffectiveOpacity(void* c_this);
	[LinkName("QGraphicsItem_SetOpacity")]
	public static extern void QGraphicsItem_SetOpacity(void* c_this, double opacity);
	[LinkName("QGraphicsItem_GraphicsEffect")]
	public static extern QGraphicsEffect QGraphicsItem_GraphicsEffect(void* c_this);
	[LinkName("QGraphicsItem_SetGraphicsEffect")]
	public static extern void QGraphicsItem_SetGraphicsEffect(void* c_this, QGraphicsEffect effect);
	[LinkName("QGraphicsItem_AcceptedMouseButtons")]
	public static extern int64 QGraphicsItem_AcceptedMouseButtons(void* c_this);
	[LinkName("QGraphicsItem_SetAcceptedMouseButtons")]
	public static extern void QGraphicsItem_SetAcceptedMouseButtons(void* c_this, int64 buttons);
	[LinkName("QGraphicsItem_AcceptHoverEvents")]
	public static extern bool QGraphicsItem_AcceptHoverEvents(void* c_this);
	[LinkName("QGraphicsItem_SetAcceptHoverEvents")]
	public static extern void QGraphicsItem_SetAcceptHoverEvents(void* c_this, bool enabled);
	[LinkName("QGraphicsItem_AcceptTouchEvents")]
	public static extern bool QGraphicsItem_AcceptTouchEvents(void* c_this);
	[LinkName("QGraphicsItem_SetAcceptTouchEvents")]
	public static extern void QGraphicsItem_SetAcceptTouchEvents(void* c_this, bool enabled);
	[LinkName("QGraphicsItem_FiltersChildEvents")]
	public static extern bool QGraphicsItem_FiltersChildEvents(void* c_this);
	[LinkName("QGraphicsItem_SetFiltersChildEvents")]
	public static extern void QGraphicsItem_SetFiltersChildEvents(void* c_this, bool enabled);
	[LinkName("QGraphicsItem_HandlesChildEvents")]
	public static extern bool QGraphicsItem_HandlesChildEvents(void* c_this);
	[LinkName("QGraphicsItem_SetHandlesChildEvents")]
	public static extern void QGraphicsItem_SetHandlesChildEvents(void* c_this, bool enabled);
	[LinkName("QGraphicsItem_IsActive")]
	public static extern bool QGraphicsItem_IsActive(void* c_this);
	[LinkName("QGraphicsItem_SetActive")]
	public static extern void QGraphicsItem_SetActive(void* c_this, bool active);
	[LinkName("QGraphicsItem_HasFocus")]
	public static extern bool QGraphicsItem_HasFocus(void* c_this);
	[LinkName("QGraphicsItem_SetFocus")]
	public static extern void QGraphicsItem_SetFocus(void* c_this);
	[LinkName("QGraphicsItem_ClearFocus")]
	public static extern void QGraphicsItem_ClearFocus(void* c_this);
	[LinkName("QGraphicsItem_FocusProxy")]
	public static extern QGraphicsItem QGraphicsItem_FocusProxy(void* c_this);
	[LinkName("QGraphicsItem_SetFocusProxy")]
	public static extern void QGraphicsItem_SetFocusProxy(void* c_this, QGraphicsItem item);
	[LinkName("QGraphicsItem_FocusItem")]
	public static extern QGraphicsItem QGraphicsItem_FocusItem(void* c_this);
	[LinkName("QGraphicsItem_FocusScopeItem")]
	public static extern QGraphicsItem QGraphicsItem_FocusScopeItem(void* c_this);
	[LinkName("QGraphicsItem_GrabMouse")]
	public static extern void QGraphicsItem_GrabMouse(void* c_this);
	[LinkName("QGraphicsItem_UngrabMouse")]
	public static extern void QGraphicsItem_UngrabMouse(void* c_this);
	[LinkName("QGraphicsItem_GrabKeyboard")]
	public static extern void QGraphicsItem_GrabKeyboard(void* c_this);
	[LinkName("QGraphicsItem_UngrabKeyboard")]
	public static extern void QGraphicsItem_UngrabKeyboard(void* c_this);
	[LinkName("QGraphicsItem_Pos")]
	public static extern QPointF QGraphicsItem_Pos(void* c_this);
	[LinkName("QGraphicsItem_X")]
	public static extern double QGraphicsItem_X(void* c_this);
	[LinkName("QGraphicsItem_SetX")]
	public static extern void QGraphicsItem_SetX(void* c_this, double x);
	[LinkName("QGraphicsItem_Y")]
	public static extern double QGraphicsItem_Y(void* c_this);
	[LinkName("QGraphicsItem_SetY")]
	public static extern void QGraphicsItem_SetY(void* c_this, double y);
	[LinkName("QGraphicsItem_ScenePos")]
	public static extern QPointF QGraphicsItem_ScenePos(void* c_this);
	[LinkName("QGraphicsItem_SetPos")]
	public static extern void QGraphicsItem_SetPos(void* c_this, QPointF pos);
	[LinkName("QGraphicsItem_SetPos2")]
	public static extern void QGraphicsItem_SetPos2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MoveBy")]
	public static extern void QGraphicsItem_MoveBy(void* c_this, double dx, double dy);
	[LinkName("QGraphicsItem_EnsureVisible")]
	public static extern void QGraphicsItem_EnsureVisible(void* c_this);
	[LinkName("QGraphicsItem_EnsureVisible2")]
	public static extern void QGraphicsItem_EnsureVisible2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_Transform")]
	public static extern QTransform QGraphicsItem_Transform(void* c_this);
	[LinkName("QGraphicsItem_SceneTransform")]
	public static extern QTransform QGraphicsItem_SceneTransform(void* c_this);
	[LinkName("QGraphicsItem_DeviceTransform")]
	public static extern QTransform QGraphicsItem_DeviceTransform(void* c_this, QTransform viewportTransform);
	[LinkName("QGraphicsItem_ItemTransform")]
	public static extern QTransform QGraphicsItem_ItemTransform(void* c_this, QGraphicsItem other);
	[LinkName("QGraphicsItem_SetTransform")]
	public static extern void QGraphicsItem_SetTransform(void* c_this, QTransform matrix);
	[LinkName("QGraphicsItem_ResetTransform")]
	public static extern void QGraphicsItem_ResetTransform(void* c_this);
	[LinkName("QGraphicsItem_SetRotation")]
	public static extern void QGraphicsItem_SetRotation(void* c_this, double angle);
	[LinkName("QGraphicsItem_Rotation")]
	public static extern double QGraphicsItem_Rotation(void* c_this);
	[LinkName("QGraphicsItem_SetScale")]
	public static extern void QGraphicsItem_SetScale(void* c_this, double scale);
	[LinkName("QGraphicsItem_Scale")]
	public static extern double QGraphicsItem_Scale(void* c_this);
	[LinkName("QGraphicsItem_Transformations")]
	public static extern QGraphicsTransform[] QGraphicsItem_Transformations(void* c_this);
	[LinkName("QGraphicsItem_SetTransformations")]
	public static extern void QGraphicsItem_SetTransformations(void* c_this, QGraphicsTransform[] transformations);
	[LinkName("QGraphicsItem_TransformOriginPoint")]
	public static extern QPointF QGraphicsItem_TransformOriginPoint(void* c_this);
	[LinkName("QGraphicsItem_SetTransformOriginPoint")]
	public static extern void QGraphicsItem_SetTransformOriginPoint(void* c_this, QPointF origin);
	[LinkName("QGraphicsItem_SetTransformOriginPoint2")]
	public static extern void QGraphicsItem_SetTransformOriginPoint2(void* c_this, double ax, double ay);
	[LinkName("QGraphicsItem_Advance")]
	public static extern void QGraphicsItem_Advance(void* c_this, int32 phase);
	[LinkName("QGraphicsItem_ZValue")]
	public static extern double QGraphicsItem_ZValue(void* c_this);
	[LinkName("QGraphicsItem_SetZValue")]
	public static extern void QGraphicsItem_SetZValue(void* c_this, double z);
